--- a/packages/digital_currency/pubspec.yaml
+++ b/packages/digital_currency/pubspec.yaml
@@ -8,9 +8,10 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  dartz: ^0.10.0  
+  dartz: ^0.10.0
   flutter:
     sdk: flutter
+  http: ^0.13.3
 
  
 dev_dependencies:
