--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 
  
 dev_dependencies:
+  digital_currency:
+    path: packages/digital_currency
   flutter_test:
     sdk: flutter
 
