fix digital_currency flow

--- a/.github/workflows/digital_currency.yaml
+++ b/.github/workflows/digital_currency.yaml
@@ -9,6 +9,9 @@ on:
 
 jobs:
   build:
+    defaults:
+      run:
+        working-directory: packages/digital_currency
     runs-on: ubuntu-latest
 
     steps:
